ecmascript/parser/tests/test262-error-references/fail/f08159ca58f10eb1.js.stderr
error: TS1109
 --> $DIR/tests/test262-parser/fail/f08159ca58f10eb1.js:1:4
  |
1 | () + 42
  |    ^

